--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "sample_datasets",
   "version": "1.0.0",
   "description": "static d3 datasets",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "browserify index.js -o dist.js -t [ babelify --presets es2015 ]"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1"
+  }
 }
