--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "static d3 datasets",
   "main": "dist/index.js",
   "scripts": {
-    "build": "browserify index.js -o dist.js -t [ babelify --presets es2015 ]"
+    "build": "browserify index.js -t [ babelify --presets es2015 ] | uglifyjs > dist.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.1.1"
+    "browserify": "^13.1.1",
+    "uglify-js": "^2.7.4"
   }
 }
