--- a/package.json
+++ b/package.json
@@ -3,15 +3,6 @@
   "version": "1.0.0",
   "description": "static d3 datasets",
   "main": "index.js",
-  "scripts": {
-    "build": "browserify index.js -t [ babelify --presets es2015 ] | uglifyjs > dist.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
-    "uglify-js": "^2.7.4"
-  }
+  "author": "jameslaneconkling",
+  "license": "ISC"
 }
